--- a/jupyter-data/Part 4.ipynb
+++ b/jupyter-data/Part 4.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Images and Descriptors"
+    "# Images"
    ]
   },
   {
@@ -16,12 +16,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/ubuntu/git_projects/IP-sound_retrive_usp/datalib/\t add to the path list\n",
-      "/home/ubuntu/git_projects/IP-sound_retrive_usp/khinsider-master/\t add to the path list\n",
-      "/home/ubuntu/git_projects/IP-sound_retrive_usp/hilbert_curve/\t add to the path list\n",
-      "/home/ubuntu/git_projects/IP-sound_retrive_usp/datalib/\t is already in the path list\n",
-      "/home/ubuntu/git_projects/IP-sound_retrive_usp/khinsider-master/\t is already in the path list\n",
-      "/home/ubuntu/git_projects/IP-sound_retrive_usp/hilbert_curve/\t is already in the path list\n"
+      "/home/ubuntu/gitproyect/usp-sound-visual/datalib/\t add to the path list\n",
+      "/home/ubuntu/gitproyect/usp-sound-visual/khinsider-master/\t add to the path list\n",
+      "/home/ubuntu/gitproyect/usp-sound-visual/hilbert_curve/\t add to the path list\n",
+      "/home/ubuntu/gitproyect/usp-sound-visual/datalib/\t is already in the path list\n",
+      "/home/ubuntu/gitproyect/usp-sound-visual/khinsider-master/\t is already in the path list\n",
+      "/home/ubuntu/gitproyect/usp-sound-visual/hilbert_curve/\t is already in the path list\n"
      ]
     }
    ],
@@ -64,6 +64,7 @@
     "import threading\n",
     "\n",
     "import meta_lib as mlb\n",
+    "import noice_inductor as nci\n",
     "\n",
     "import imageio as img\n",
     "import scipy.misc"
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +362,7 @@
        "11          2      44100   7741440     NONE  not compressed  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -393,9 +394,20 @@
      "output_type": "stream",
      "text": [
       "12\n",
-      "../hilbert_curve/pattern_12_size.npy\n",
-      "16777216\n",
-      "[3 1]\n"
+      "../hilberth-curve/pattern_12_size.npy\n",
+      "4096\n",
+      "[    240     243     244 ... 5592483 5592484 5592485]\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 4096 is out of bounds for axis 0 with size 4096",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-1b3b190b0c7d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0mwavelength\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmlb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mInt2nM\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdummy_r\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex_bean\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m<<\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m<<\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m     \u001b[0mimage_carry\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcarry_coords\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcarry_coords\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mmlb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwavelength_to_rgb\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwavelength\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: index 4096 is out of bounds for axis 0 with size 4096"
      ]
     }
    ],
@@ -407,7 +419,7 @@
     "image_carry = np.zeros((size_len, size_len, 3))\n",
     "\n",
     "\n",
-    "hilbert_path = \"../hilbert_curve/pattern_{:d}_size.npy\".format(near_2_pow)\n",
+    "hilbert_path = \"../hilberth-curve/pattern_{:d}_size.npy\".format(near_2_pow)\n",
     "print(hilbert_path)\n",
     "hilbert_pattern = np.load(hilbert_path)\n",
     "\n",
@@ -438,13 +450,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:2: DeprecationWarning: `toimage` is deprecated!\n",
-      "`toimage` is deprecated in SciPy 1.0.0, and will be removed in 1.2.0.\n",
-      "Use Pillow's ``Image.fromarray`` directly instead.\n",
-      "  \n"
+     "ename": "NameError",
+     "evalue": "name 'image_carry' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-ff71601791cd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmisc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmisc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoimage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_carry\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcmin\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcmax\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m255\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDATA_PATH\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'outfile.png'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'image_carry' is not defined"
      ]
     }
    ],
@@ -462,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1251,6 +1264,273 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generating Noise Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>\tSTATE\t: 1\n",
+      "'01 - tank! (tv stretch).wav'\n",
+      "\n",
+      "   Unnamed: 0                    file name  nchannels  sampwidth  framerate  \\\n",
+      "0           0  01 - tank! (tv stretch).wav          2          2      44100   \n",
+      "\n",
+      "   nframes comptype        compname  \n",
+      "0  9138816     NONE  not compressed  \n",
+      "Hilberth Pattern\t (4096, 4096, 3)\n",
+      "\tnoice 10\n",
+      "Not Changed 0.8999289185664573 Changed 0.1000710814335427\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:31: DeprecationWarning: `toimage` is deprecated!\n",
+      "`toimage` is deprecated in SciPy 1.0.0, and will be removed in 1.2.0.\n",
+      "Use Pillow's ``Image.fromarray`` directly instead.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tnoice 20\n",
+      "Not Changed 0.7996598902220792 Changed 0.20034010977792086\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:35: DeprecationWarning: `toimage` is deprecated!\n",
+      "`toimage` is deprecated in SciPy 1.0.0, and will be removed in 1.2.0.\n",
+      "Use Pillow's ``Image.fromarray`` directly instead.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tnoice 30\n",
+      "Not Changed 0.6666268730275067 Changed 0.3333731269724934\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:39: DeprecationWarning: `toimage` is deprecated!\n",
+      "`toimage` is deprecated in SciPy 1.0.0, and will be removed in 1.2.0.\n",
+      "Use Pillow's ``Image.fromarray`` directly instead.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tnoice 50\n",
+      "Not Changed 0.5001022014453954 Changed 0.4998977985546046\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:43: DeprecationWarning: `toimage` is deprecated!\n",
+      "`toimage` is deprecated in SciPy 1.0.0, and will be removed in 1.2.0.\n",
+      "Use Pillow's ``Image.fromarray`` directly instead.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tnoice 10\n",
+      "Not Changed 0.89994161167959 Changed 0.10005838832041007\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:50: DeprecationWarning: `toimage` is deprecated!\n",
+      "`toimage` is deprecated in SciPy 1.0.0, and will be removed in 1.2.0.\n",
+      "Use Pillow's ``Image.fromarray`` directly instead.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tnoice 20\n",
+      "Not Changed 0.8001450735292348 Changed 0.19985492647076525\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:54: DeprecationWarning: `toimage` is deprecated!\n",
+      "`toimage` is deprecated in SciPy 1.0.0, and will be removed in 1.2.0.\n",
+      "Use Pillow's ``Image.fromarray`` directly instead.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tnoice 30\n",
+      "Not Changed 0.666377168853639 Changed 0.333622831146361\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:58: DeprecationWarning: `toimage` is deprecated!\n",
+      "`toimage` is deprecated in SciPy 1.0.0, and will be removed in 1.2.0.\n",
+      "Use Pillow's ``Image.fromarray`` directly instead.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tnoice 50\n",
+      "Not Changed 0.4998550140094765 Changed 0.5001449859905235\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:62: DeprecationWarning: `toimage` is deprecated!\n",
+      "`toimage` is deprecated in SciPy 1.0.0, and will be removed in 1.2.0.\n",
+      "Use Pillow's ``Image.fromarray`` directly instead.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>\tSTATE\t: 2\n",
+      "'04 - diamonds.wav'\n",
+      "\n",
+      "   Unnamed: 0          file name  nchannels  sampwidth  framerate   nframes  \\\n",
+      "1           1  04 - diamonds.wav          2          2      44100  10653696   \n",
+      "\n",
+      "  comptype        compname  \n",
+      "1     NONE  not compressed  \n",
+      "Hilberth Pattern\t (4096, 4096, 3)\n",
+      "\tnoice 10\n",
+      "Not Changed 0.899925040084688 Changed 0.100074959915312\n",
+      "\tnoice 20\n",
+      "Not Changed 0.799899077259024 Changed 0.20010092274097604\n",
+      "\tnoice 30\n",
+      "Not Changed 0.6664240591103893 Changed 0.3335759408896107\n",
+      "\tnoice 50\n",
+      "Not Changed 0.500058758961915 Changed 0.499941241038085\n",
+      "\tnoice 10\n",
+      "Not Changed 0.9000689338364702 Changed 0.09993106616352976\n",
+      "\tnoice 20\n",
+      "Not Changed 0.7998803982918976 Changed 0.20011960170810236\n",
+      "\tnoice 30\n",
+      "Not Changed 0.6665922636786827 Changed 0.33340773632131726\n",
+      "\tnoice 50\n",
+      "Not Changed 0.5000145489442441 Changed 0.49998545105575587\n",
+      ">>\tSTATE\t: 3\n",
+      "'07 - mushroom hunting.wav'\n",
+      "\n",
+      "   Unnamed: 0                  file name  nchannels  sampwidth  framerate  \\\n",
+      "2           2  07 - mushroom hunting.wav          2          2      44100   \n",
+      "\n",
+      "   nframes comptype        compname  \n",
+      "2  8802432     NONE  not compressed  \n",
+      "Hilberth Pattern\t (4096, 4096, 3)\n",
+      "\tnoice 10\n",
+      "Not Changed 0.900002044889877 Changed 0.099997955110123\n",
+      "\tnoice 20\n",
+      "Not Changed 0.8001621143252489 Changed 0.19983788567475116\n"
+     ]
+    }
+   ],
+   "source": [
+    "dinamic = False\n",
+    "\n",
+    "hilbert_shape = (1<<12, 1<<12, 3)\n",
+    "hilbert_path = \"../hilberth-curve/pattern_12_size.npy\"\n",
+    "hilbert_pattern = np.load(hilbert_path)\n",
+    "\n",
+    "for item_id in range(len(files_wav)):\n",
+    "   \n",
+    "    print(\">>\\tSTATE\\t: {:d}\".format(item_id + 1))\n",
+    "    pprint.pprint(files_wav[item_id])\n",
+    "    print(\"\")\n",
+    "    print(meta_data.iloc[[item_id]])\n",
+    "        \n",
+    "    [carry_l, carry_r] = mlb.stereo_chanel_data(sound_data_container[item_id][0])\n",
+    "    \n",
+    "    if dinamic:\n",
+    "        carry_len = np.array(meta_data.iloc[[item_id]]).item(-3) - 2\n",
+    "        near_2_pow = int(np.ceil(np.log2(dummy_len)) // 2)\n",
+    "        size_len = 1<<near_2_pow\n",
+    "        hilbert_shape = (size_len, size_len, 3)\n",
+    "        hilbert_path = \"../hilberth-curve/pattern_{:d}_size.npy\".format(near_2_pow)\n",
+    "    else:\n",
+    "        pass\n",
+    "        \n",
+    "    print(\"Hilberth Pattern\\t\", hilbert_shape)\n",
+    "    \n",
+    "    ### L\n",
+    "    ## 10\n",
+    "    print(\"\\tnoice 10\")\n",
+    "    matrx = sound_2_image(nci.random_noise(carry_l, 10), hilbert_shape, hilbert_pattern)\n",
+    "    scipy.misc.toimage(matrx, cmin=0, cmax=255).save(DATA_PATH + files_wav[item_id][:-4] + \"_10_{:s}.png\".format('L'))\n",
+    "    ## 20\n",
+    "    print(\"\\tnoice 20\")\n",
+    "    matrx = sound_2_image(nci.random_noise(carry_l, 20), hilbert_shape, hilbert_pattern)\n",
+    "    scipy.misc.toimage(matrx, cmin=0, cmax=255).save(DATA_PATH + files_wav[item_id][:-4] + \"_20_{:s}.png\".format('L'))\n",
+    "    ## 30\n",
+    "    print(\"\\tnoice 30\")\n",
+    "    matrx = sound_2_image(nci.random_noise(carry_l, 30), hilbert_shape, hilbert_pattern)\n",
+    "    scipy.misc.toimage(matrx, cmin=0, cmax=255).save(DATA_PATH + files_wav[item_id][:-4] + \"_30_{:s}.png\".format('L'))\n",
+    "    ## 50\n",
+    "    print(\"\\tnoice 50\")\n",
+    "    matrx = sound_2_image(nci.random_noise(carry_l, 35), hilbert_shape, hilbert_pattern)\n",
+    "    scipy.misc.toimage(matrx, cmin=0, cmax=255).save(DATA_PATH + files_wav[item_id][:-4] + \"_35_{:s}.png\".format('L'))\n",
+    "    \n",
+    "    \n",
+    "    ### R\n",
+    "    ## 10\n",
+    "    print(\"\\tnoice 10\")\n",
+    "    matrx = sound_2_image(nci.random_noise(carry_r, 10), hilbert_shape, hilbert_pattern)\n",
+    "    scipy.misc.toimage(matrx, cmin=0, cmax=255).save(DATA_PATH + files_wav[item_id][:-4] + \"_10_{:s}.png\".format('R'))\n",
+    "    ## 20\n",
+    "    print(\"\\tnoice 20\")\n",
+    "    matrx = sound_2_image(nci.random_noise(carry_r, 20), hilbert_shape, hilbert_pattern)\n",
+    "    scipy.misc.toimage(matrx, cmin=0, cmax=255).save(DATA_PATH + files_wav[item_id][:-4] + \"_20_{:s}.png\".format('R'))\n",
+    "    ## 30\n",
+    "    print(\"\\tnoice 30\")\n",
+    "    matrx = sound_2_image(nci.random_noise(carry_r, 30), hilbert_shape, hilbert_pattern)\n",
+    "    scipy.misc.toimage(matrx, cmin=0, cmax=255).save(DATA_PATH + files_wav[item_id][:-4] + \"_30_{:s}.png\".format('R'))\n",
+    "    ## 50\n",
+    "    print(\"\\tnoice 50\")\n",
+    "    matrx = sound_2_image(nci.random_noise(carry_r, 35), hilbert_shape, hilbert_pattern)\n",
+    "    scipy.misc.toimage(matrx, cmin=0, cmax=255).save(DATA_PATH + files_wav[item_id][:-4] + \"_35_{:s}.png\".format('R'))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1274,7 +1554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
